[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/game/entities/effects/SlashCutEffect.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/fx/thunderStrike/Thunderstrike w blur.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EndPivot/Fx:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CutLine:default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.356863, 0.137255, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "dash"
length = 0.6
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("StartPivot/Fx:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EndPivot/Fx:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CutLine:default_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.525 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.356863, 0.137255, 1 ), Color( 1, 0.356863, 0.137255, 0 ) ]
}

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.909091 ), 0.0, 0.0, 0, 0 ]

[node name="SlashCutEffect" type="Node2D"]
script = ExtResource( 1 )

[node name="DashAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/dash = SubResource( 2 )

[node name="StartPivot" type="Node2D" parent="."]
position = Vector2( -37, -3 )

[node name="Fx" type="Sprite" parent="StartPivot"]
position = Vector2( 1, 0 )
rotation = -1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )
hframes = 13
frame = 12

[node name="EndPivot" type="Node2D" parent="."]
position = Vector2( 62, -3 )

[node name="Fx" type="Sprite" parent="EndPivot"]
position = Vector2( -25, 0 )
rotation = -1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )
hframes = 13
frame = 6

[node name="CutLine" type="Line2D" parent="."]
points = PoolVector2Array( -37, -3, 64, -3 )
width = 1.0
width_curve = SubResource( 3 )
default_color = Color( 1, 0.356863, 0.137255, 1 )
